bb alert going behind header fix

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1205,7 +1205,7 @@ input:focus {
     top: 14px;
     left: 50%;
     padding: 0.8em 1em;
-    z-index: 10000;
+    z-index: 100000000000;
     font-size: 13px;
     margin-left: -155px;
     width: 315px;
